--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "homepage": "https://danish.dev/",
-  "name": "portfolio",
+  "name": "wednesday",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/drei": "^9.47.1",
-    "@react-three/fiber": "^8.9.1",
+    "@react-three/drei": "^9.68.6",
+    "@react-three/fiber": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion-3d": "^8.4.2",
+    "framer-motion-3d": "^10.12.14",
+    "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.7",
-    "three": "^0.147.0",
+    "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
