--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "wednesday",
+  "name": "terminal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/drei": "^9.68.6",
-    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "^9.77.0",
+    "@react-three/fiber": "^8.13.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion-3d": "^10.12.14",
-    "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "three": "^0.152.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
