Redone the site ✨

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "homepage": "https://dan10ish.github.io",
-  "name": "imessage",
+  "name": "september",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/drei": "^9.80.0",
-    "@react-three/fiber": "^8.13.6",
+    "@react-three/drei": "^9.83.9",
+    "@react-three/fiber": "^8.14.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^10.15.0",
-    "gh-pages": "^5.0.0",
+    "framer-motion": "^10.16.4",
+    "framer-motion-3d": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
