--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "may",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dan10ish.github.io/",
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
