--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "blog",
+  "name": "works",
   "homepage": "https://dan10ish.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mdx-js/react": "^3.0.1",
-    "@react-three/drei": "^9.108.3",
-    "@react-three/fiber": "^8.16.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.2.12",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.4"
