--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,12 @@ jobs:
         with:
           node-version: "14" # or another version that matches your project
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+
+      - name: Remove node_modules
+        run: rm -rf node_modules
+
       - name: Install dependencies
         run: npm ci
 
