--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "gray-matter": "^4.0.3",
     "katex": "^0.16.11",
     "next": "13.4.4",
+    "next-themes": "^0.3.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.3",
