--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@million/lint": "^1.0.9",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.10.0",
     "katex": "^0.16.11",
     "next": "13.4.4",
     "next-themes": "^0.3.0",
