--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
-    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -d out -t true"
+    "deploy": "next build && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@million/lint": "^1.0.9",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "katex": "^0.16.11",
-    "next": "13.4.4",
+    "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "prismjs": "^1.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icon-cloud": "^4.1.4",
+    "react-masonry-css": "^1.0.16",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.3",
