--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "deploy": "next build && touch out/.nojekyll && gh-pages -d out -t true"
@@ -15,7 +16,9 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "katex": "^0.16.11",
+    "lucide-react": "^0.453.0",
     "next": "^14.2.15",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
