--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && touch out/.nojekyll && gh-pages -d out -t true"
+    "deploy": "npm run build && next-sitemap && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
     "@million/lint": "^1.0.9",
+    "@supabase/supabase-js": "^2.45.6",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "katex": "^0.16.11",
