--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
     branches: [main]
@@ -17,31 +16,38 @@ jobs:
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1 # Shallow clone for faster checkout
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      # Advanced caching
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+            ${{ github.workspace }}/node_modules
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-nextjs-
+
+      - uses: actions/setup-node@v3
         with:
           node-version: "18"
           cache: "npm"
 
+      # Use install instead of ci for better caching
       - name: Install dependencies
-        run: npm ci
+        run: npm install --prefer-offline --no-audit
 
-      - name: Create .env.production file
+      # Combine env file creation and build
+      - name: Build
         run: |
           echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" >> .env.production
           echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env.production
-
-      - name: Build
-        run: npm run build
-
-      - name: Generate sitemap
-        run: npm run postbuild
-
-      - name: Add nojekyll
-        run: touch out/.nojekyll
+          npm run build
+          touch out/.nojekyll
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
@@ -49,3 +55,5 @@ jobs:
           branch: gh-pages
           folder: out
           clean: true
+          clean-exclude: |
+            .nojekyll
