--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rehype-slug": "^5.1.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "remark-footnotes": "^4.0.1",
     "remark-math": "^5.1.1"
   },
   "devDependencies": {
