--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@million/lint": "^1.0.9",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.45.6",
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
@@ -33,8 +35,8 @@
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^5.1.0",
     "remark": "^14.0.3",
-    "remark-html": "^15.0.2",
     "remark-footnotes": "^4.0.1",
+    "remark-html": "^15.0.2",
     "remark-math": "^5.1.1"
   },
   "devDependencies": {
