🛠️ Update dependencies, enhance performance, and improve accessibility

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.45.6",
+    "compression-next": "^1.0.3",
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
