--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "highlight.js": "^11.10.0",
     "katex": "^0.16.11",
     "lucide-react": "^0.453.0",
-    "next": "^14.2.15",
+    "next": "14.2.15",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "prismjs": "^1.29.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icon-cloud": "^4.1.4",
     "react-masonry-css": "^1.0.16",
     "rehype-autolink-headings": "^6.1.1",
