--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@frank-mayer/react-tag-cloud": "^1.2.1",
     "@million/lint": "^1.0.9",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.5",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.45.6",
     "compression-next": "^1.0.3",
+    "file-loader": "^6.2.0",
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
@@ -26,11 +30,13 @@
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^3.11.174",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon-cloud": "^4.1.4",
     "react-masonry-css": "^1.0.16",
+    "react-pdf": "^9.2.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.3",
@@ -40,7 +46,8 @@
     "remark-footnotes": "^4.0.1",
     "remark-html": "^15.0.2",
     "remark-math": "^5.1.1",
-    "simple-icons": "^13.20.0"
+    "simple-icons": "^13.20.0",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
