--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.45.6",
     "compression-next": "^1.0.3",
+    "exifreader": "^4.25.0",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
