--- a/package.json
+++ b/package.json
@@ -12,13 +12,7 @@
     "deploy": "npm run build && npm run postbuild && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
-    "@frank-mayer/react-tag-cloud": "^1.2.1",
     "@million/lint": "^1.0.9",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf/renderer": "^4.1.5",
-    "@react-three/drei": "^9.117.3",
-    "@react-three/fiber": "^8.17.10",
     "@supabase/supabase-js": "^2.45.6",
     "compression-next": "^1.0.3",
     "exifreader": "^4.25.0",
@@ -35,7 +29,6 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icon-cloud": "^4.1.4",
     "react-masonry-css": "^1.0.16",
     "react-pdf": "^9.2.1",
     "rehype-autolink-headings": "^6.1.1",
@@ -43,11 +36,11 @@
     "rehype-katex": "^6.0.3",
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^14.0.3",
     "remark-footnotes": "^4.0.1",
     "remark-html": "^15.0.2",
     "remark-math": "^5.1.1",
-    "simple-icons": "^13.20.0",
     "webpack": "^5.97.1"
   },
   "devDependencies": {
