--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/favicon.ico",
-      "sizes": "64x64",
-      "type": "image/x-icon"
+      "src": "/icons/icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
