--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "deploy": "npm run build && npm run postbuild && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
+    "@mui/x-charts": "^7.23.6",
     "@supabase/supabase-js": "^2.45.6",
     "compression-next": "^1.0.3",
     "exifreader": "^4.25.0",
@@ -21,7 +25,7 @@
     "highlight.js": "^11.10.0",
     "katex": "^0.16.11",
     "lucide-react": "^0.453.0",
-    "next": "^15.1.3",
+    "next": "^15.1.4",
     "next-sitemap": "^4.2.3",
     "pdfjs-dist": "^3.11.174",
     "prismjs": "^1.29.0",
@@ -29,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-masonry-css": "^1.0.16",
     "react-pdf": "^9.2.1",
+    "recharts": "^2.15.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.3",
