--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,8 @@ jobs:
           echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env.production
           npm run build
           npm run postbuild
+          cp ./out/sitemap*.xml ./out
+          cp ./out/robots.txt ./out
           touch out/.nojekyll
 
       - name: Deploy
