--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,33 +16,29 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - uses: actions/setup-node@v3
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: "18"
-          cache: "npm"
+          bun-version: latest
       - name: Cache
         uses: actions/cache@v3
         with:
           path: |
-            ~/.npm
+            ~/.bun
             ${{ github.workspace }}/.next/cache
-            ${{ github.workspace }}/node_modules
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          key: ${{ runner.os }}-nextjs-bun-${{ hashFiles('**/bun.lockb') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
-            ${{ runner.os }}-nextjs-
+            ${{ runner.os }}-nextjs-bun-${{ hashFiles('**/bun.lockb') }}-
+            ${{ runner.os }}-nextjs-bun-
       - name: Clear and Install
         run: |
           rm -rf node_modules
-          rm -f package-lock.json
-          npm cache clean --force
-          npm install
-          npm install react@18.3.1 react-dom@18.3.1 next@14.2.15 --save-exact
+          bun install
       - name: Setup and Build
         run: |
           echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" > .env.production
           echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env.production
-          npm run build
+          bun run build
       - name: Prepare deployment
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
