--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,29 +16,33 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: actions/setup-node@v3
         with:
-          bun-version: latest
+          node-version: "18"
+          cache: "npm"
       - name: Cache
         uses: actions/cache@v3
         with:
           path: |
-            ~/.bun
+            ~/.npm
             ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-bun-${{ hashFiles('**/bun.lockb') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+            ${{ github.workspace }}/node_modules
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-bun-${{ hashFiles('**/bun.lockb') }}-
-            ${{ runner.os }}-nextjs-bun-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-nextjs-
       - name: Clear and Install
         run: |
           rm -rf node_modules
-          bun install
+          rm -f package-lock.json
+          npm cache clean --force
+          npm install
+          npm install react@18.3.1 react-dom@18.3.1 next@14.2.15 --save-exact
       - name: Setup and Build
         run: |
           echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" > .env.production
           echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env.production
-          bun run build
+          npm run build
       - name: Prepare deployment
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
