--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "deploy": "npm run build && npm run postbuild && touch out/.nojekyll && gh-pages -d out -t true"
   },
   "dependencies": {
-    "@icons-pack/react-simple-icons": "^11.2.0",
-    "@supabase/supabase-js": "^2.45.6",
+    "@icons-pack/react-simple-icons": "^12.2.0",
+    "@supabase/supabase-js": "^2.49.1",
     "compression-next": "^1.0.3",
-    "exifreader": "^4.25.0",
-    "framer-motion": "^12.1.0",
+    "exifreader": "^4.26.2",
+    "framer-motion": "^12.4.10",
     "github-slugger": "^2.0.0",
-    "highlight.js": "^11.10.0",
-    "katex": "^0.16.11",
-    "lucide-react": "^0.453.0",
-    "next": "^15.1.5",
+    "highlight.js": "^11.11.1",
+    "katex": "^0.16.21",
+    "lucide-react": "^0.479.0",
+    "next": "^15.2.1",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-masonry-css": "^1.0.16",
-    "recharts": "^2.15.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-katex": "^6.0.3",
-    "rehype-slug": "^5.1.0",
-    "remark": "^14.0.3",
-    "remark-footnotes": "^4.0.1",
-    "remark-html": "^15.0.2",
-    "remark-math": "^5.1.1",
-    "webpack": "^5.97.1"
+    "recharts": "^2.15.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
+    "webpack": "^5.98.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.3.0",
     "raw-loader": "^4.0.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
