--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#1c1c1c",
+  "theme_color": "#141414",
   "icons": [
     {
       "src": "/icons/icon.png",
