--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "npm run build && npm run postbuild && touch out/.nojekyll && gh-pages -d out -t true"
+    "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.4.10",
-    "lucide-react": "^0.479.0",
-    "next": "^15.2.1",
-    "next-sitemap": "^4.2.3",
+    "lucide-react": "^0.488.0",
+    "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "raw-loader": "^4.0.2"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
