--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "shiki": "^3.3.0"
+    "sugar-high": "^0.9.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
