--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "framer-motion": "^12.15.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
