--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^1.0.0-beta.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rehype-autolink-headings": "^7.1.0",
