--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "dan10ish.github.io",
+  "homepage": "https://dan10ish.github.io",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
