Major Bug Fixes

--- a/src/apps/Projects/projectsData.json
+++ b/src/apps/Projects/projectsData.json
@@ -6,7 +6,7 @@
             "live": null,
             "description": "Algorithm visualization and simulation tool for learning data structures and algorithms",
             "tag": "Algorithm",
-            "videoPath": "./src/apps/Projects/assets/algosim.mp4"
+            "videoPath": "/assets/projects/algosim.mp4"
         },
         {
             "title": "CogniCart",
@@ -14,7 +14,7 @@
             "live": null,
             "description": "AI-powered shopping cart with cognitive recommendations",
             "tag": "AI",
-            "videoPath": "./src/apps/Projects/assets/cold.mp4"
+            "videoPath": "/assets/projects/cold.mp4"
         },
         {
             "title": "Code Editor",
@@ -22,7 +22,7 @@
             "live": "http://dan10ish.github.io/code",
             "description": "Web-based code editor with syntax highlighting and live preview",
             "tag": "Web",
-            "videoPath": "./src/apps/Projects/assets/code.mp4"
+            "videoPath": "/assets/projects/code.mp4"
         },
         {
             "title": "3DOF Robotic Arm",
@@ -30,7 +30,7 @@
             "live": null,
             "description": "3 Degrees of Freedom robotic arm control system in C",
             "tag": "Robotics",
-            "videoPath": "./src/apps/Projects/assets/3dof.mp4"
+            "videoPath": "/assets/projects/3dof.mp4"
         },
         {
             "title": "Pathfinder",
@@ -38,7 +38,7 @@
             "live": "https://dan10ish.github.io/pathfinding-visualizer/",
             "description": "Interactive pathfinding algorithm visualizer with multiple algorithms",
             "tag": "Algorithm",
-            "videoPath": "./src/apps/Projects/assets/path.mp4"
+            "videoPath": "/assets/projects/path.mp4"
         },
         {
             "title": "Arm Visualizer",
@@ -46,7 +46,7 @@
             "live": "https://dan10ish.github.io/RoboticArm/",
             "description": "3D robotic arm movement visualizer and simulator",
             "tag": "Robotics",
-            "videoPath": "./src/apps/Projects/assets/rob-visual.mp4"
+            "videoPath": "/assets/projects/rob-visual.mp4"
         },
         {
             "title": "College Notes",
@@ -54,7 +54,7 @@
             "live": "https://dan10ish.github.io/college/",
             "description": "Digital college notes and study materials platform",
             "tag": "Education",
-            "videoPath": "./src/apps/Projects/assets/notes.mp4"
+            "videoPath": "/assets/projects/notes.mp4"
         },
         {
             "title": "macOS Portfolio",
@@ -62,7 +62,7 @@
             "live": "https://os-danishs-projects-31d8c677.vercel.app/",
             "description": "macOS-inspired portfolio website with desktop simulation",
             "tag": "Portfolio",
-            "videoPath": "./src/apps/Projects/assets/mac.mp4"
+            "videoPath": "/assets/projects/mac.mp4"
         },
         {
             "title": "Comment Toxicity",
@@ -78,7 +78,7 @@
             "live": null,
             "description": "Terminal-based hacking simulation game built in Unity",
             "tag": "Game",
-            "videoPath": "./src/apps/Projects/assets/terminal.mp4"
+            "videoPath": "/assets/projects/terminal.mp4"
         },
         {
             "title": "Office",
@@ -86,7 +86,7 @@
             "live": "https://dan10ish.github.io/Office/",
             "description": "Web-based office suite with document editing capabilities",
             "tag": "Web",
-            "videoPath": "./src/apps/Projects/assets/office.mp4"
+            "videoPath": "/assets/projects/office.mp4"
         },
         {
             "title": "Cube Runner",
@@ -94,7 +94,7 @@
             "live": null,
             "description": "3D endless runner game with cube mechanics in Unity",
             "tag": "Game",
-            "videoPath": "./src/apps/Projects/assets/cube.mp4"
+            "videoPath": "/assets/projects/cube.mp4"
         },
         {
             "title": "Galaxy",
@@ -102,7 +102,7 @@
             "live": "https://dan10ish.github.io/Galaxy/",
             "description": "Interactive galaxy simulation with particle systems",
             "tag": "Simulation",
-            "videoPath": "./src/apps/Projects/assets/galaxy.mp4"
+            "videoPath": "/assets/projects/galaxy.mp4"
         },
         {
             "title": "Personal Website",
@@ -110,7 +110,7 @@
             "live": "https://dan10ish.github.io",
             "description": "Personal portfolio website showcasing projects and skills",
             "tag": "Portfolio",
-            "videoPath": "./src/apps/Projects/assets/web.mp4"
+            "videoPath": "/assets/projects/web.mp4"
         }
     ]
 }
