--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.539.0",
     "next": "^15.4.6",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rehype-autolink-headings": "^7.1.0",
