Implemented Photos section

--- a/public/videos/media-manifest.json
+++ b/public/videos/media-manifest.json
@@ -73,20 +73,134 @@
   },
   {
     "id": 12,
-    "src": "/videos/image1.png",
-    "name": "image1.png",
+    "src": "/videos/Image1.jpeg",
+    "name": "Image1.jpeg",
     "type": "image"
   },
   {
     "id": 13,
-    "src": "/videos/image2.png",
-    "name": "image2.png",
+    "src": "/videos/Image10.jpeg",
+    "name": "Image10.jpeg",
     "type": "image"
   },
   {
     "id": 14,
-    "src": "/videos/image3.png",
-    "name": "image3.png",
+    "src": "/videos/Image11.jpeg",
+    "name": "Image11.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 15,
+    "src": "/videos/Image12.jpeg",
+    "name": "Image12.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 16,
+    "src": "/videos/Image13.jpeg",
+    "name": "Image13.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 17,
+    "src": "/videos/Image14.jpeg",
+    "name": "Image14.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 18,
+    "src": "/videos/Image15.jpeg",
+    "name": "Image15.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 19,
+    "src": "/videos/Image16.jpeg",
+    "name": "Image16.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 20,
+    "src": "/videos/Image17.jpeg",
+    "name": "Image17.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 21,
+    "src": "/videos/Image18.jpeg",
+    "name": "Image18.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 22,
+    "src": "/videos/Image19.jpeg",
+    "name": "Image19.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 23,
+    "src": "/videos/Image2.jpeg",
+    "name": "Image2.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 24,
+    "src": "/videos/Image20.jpeg",
+    "name": "Image20.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 25,
+    "src": "/videos/Image21.jpeg",
+    "name": "Image21.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 26,
+    "src": "/videos/Image22.jpeg",
+    "name": "Image22.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 27,
+    "src": "/videos/Image3.jpeg",
+    "name": "Image3.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 28,
+    "src": "/videos/Image4.jpeg",
+    "name": "Image4.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 29,
+    "src": "/videos/Image5.jpeg",
+    "name": "Image5.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 30,
+    "src": "/videos/Image6.jpeg",
+    "name": "Image6.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 31,
+    "src": "/videos/Image7.jpeg",
+    "name": "Image7.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 32,
+    "src": "/videos/Image8.jpeg",
+    "name": "Image8.jpeg",
+    "type": "image"
+  },
+  {
+    "id": 33,
+    "src": "/videos/Image9.jpeg",
+    "name": "Image9.jpeg",
     "type": "image"
   }
 ]
