--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Install dependencies
         run: npm ci
+      - name: Generate Sitemap
+        run: npm run generate-sitemap
       - name: Build
         run: npm run build
       - name: Upload artifact
