--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "export": "next build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
+    "framer-motion": "^12.23.22",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.23",
     "lucide-react": "^0.544.0",
@@ -21,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-player": "^3.3.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-slug": "^6.0.0",
