--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-tweet": "^3.2.2",
+    "react-youtube": "^10.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-slug": "^6.0.0",
