--- a/package.json
+++ b/package.json
@@ -16,19 +16,13 @@
     "@supabase/supabase-js": "^2.80.0",
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.552.0",
+    "lucide-react": "^0.553.0",
     "next": "^16.0.1",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-tweet": "^3.2.2",
-    "react-youtube": "^10.1.0",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "sugar-high": "^0.9.4"
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
