--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
+    "next-mdx-remote": "^6.0.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
